--- a/DisableNvidiaTelemetry/Properties/Resources.resx
+++ b/DisableNvidiaTelemetry/Properties/Resources.resx
@@ -126,4 +126,7 @@ Redistribution of this software is allowed, but the origin of this software must
   <data name="binoculars_64" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\binoculars-64.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="GitHub_Mark_64px" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\GitHub-Mark-64px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
