--- a/DisableNvidiaTelemetry/Properties/Resources.resx
+++ b/DisableNvidiaTelemetry/Properties/Resources.resx
@@ -112,17 +112,17 @@
     <value>2.0</value>
   </resheader>
   <resheader name="reader">
-    <value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+    <value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <resheader name="writer">
-    <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+    <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="ApplicationLicense" xml:space="preserve">
     <value>This software is provided 'as-is', without any express or implied warranty. In no event will the authors be held liable for any damages arising from the use of this software. 
 
 Redistribution of this software is allowed, but the origin of this software must not be misrepresented; you must not claim that you wrote the original software.</value>
   </data>
-  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
   <data name="binoculars_64" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\binoculars-64.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -293,5 +293,8 @@ Redistribution of this software is allowed, but the origin of this software must
   </data>
   <data name="Task_scheduler_name" xml:space="preserve">
     <value>Disable Nvidia Telemetry</value>
+  </data>
+  <data name="Logging_disabled_on_read_only_device" xml:space="preserve">
+    <value>Logging disabled on read-only device</value>
   </data>
 </root>
