--- a/DisableNvidiaTelemetry/Properties/Resources.resx
+++ b/DisableNvidiaTelemetry/Properties/Resources.resx
@@ -315,4 +315,7 @@ Redistribution of this software is allowed, but the origin of this software must
   <data name="Error" xml:space="preserve">
     <value>Error</value>
   </data>
+  <data name="Updates" xml:space="preserve">
+    <value>Updates</value>
+  </data>
 </root>
